base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tianluai
  labels:
    app.kubernetes.io/part-of: tianluai
